--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,12 @@
     -->
 
      <!-- Js Script File -->
+<!-- Jquery Link -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+    <!-- Bootstrap Datepicker JS -->
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
   
 
     <!-- Bootstrap JS -->
